Fixes to index.html Fixed modal misalignment on 576px width Fixed form modal btnClose misalignment on 576px width Changed a font size in components.css Added functionality to the two main buttons in the initial section

--- a/docs/src/css/modal.css
+++ b/docs/src/css/modal.css
@@ -13,7 +13,9 @@
 .modal-header{
     color: #C8922B;
 }
-
+.modal-open{
+    padding: none !important;
+}
 .form-modal-bg .modal-header{
     border-bottom: 1px solid #23693e;
     padding: 1rem 2rem;
@@ -57,8 +59,13 @@
     width: 100%;
     border-bottom: 1px solid #23693e;
     padding: 0 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
-
+.modal-close{
+    position: unset;
+}
 .modal-nav .button{
     position: relative;
     border: none;
@@ -467,8 +474,14 @@ label{
     width: 20px;
     height: 20px;
 }
-
-
+.modal-tabs{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: row;
+   width: fit-content;
+   height: fit-content; 
+}
 /* ---------- RESPONSIVE ---------- */
 
 @media (max-width: 768px){
@@ -550,4 +563,11 @@ label{
         padding: 12px 20px;
         font-size: 15px;
     }
+}
+@media (max-width: 575.98px) {
+  .modal-dialog {
+    min-width: min(100vw - 1rem, var(--bs-modal-width));
+    margin: 0 auto;
+  }
+
 }
